--- a/client/layouts/main.html
+++ b/client/layouts/main.html
@@ -1,10 +1,11 @@
 <template name='layout'>
   <div id='header-container' class='header-container'>
     <nav>
-      <div class="nav-wrapper">
+      <div class="nav-wrapper cyan">
+        &nbsp;&nbsp;
         <a href="#" class="brand-logo">Kulverão</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><a href="#">Produtos</a></li>
+          <li><a href="/products">Produtos</a></li>
           <li><a href="#">Vendas</a></li>
           <li><a href="/users">Utilizadores</a></li>
           <li><a class="logout" href="#">Terminar Sessão</a></li>
