--- a/client/views/products/newProduct.html
+++ b/client/views/products/newProduct.html
@@ -1,16 +1,16 @@
-<template name="newUser">
+<template name="newProduct">
   <div class="card">
     <div class="card-content">
-      <span class="card-title black-text">Novo utilizador</span>
+      <span class="card-title black-text">Novo Produto</span>
       <form>
         <div>
           <div class="input-field">
-            <input id="username" type="text" class="validate">
-            <label for="username">Utilizador</label>
+            <input id="name" type="text" class="validate">
+            <label for="name">Nome</label>
           </div>
           <div class="input-field">
-            <input id="password" type="password" class="validate">
-            <label for="password">Password</label>
+            <input id="price" type="text" class="validate">
+            <label for="price">Preço</label>
           </div>
         </div>
       </form>
