--- a/client/views/users/user.html
+++ b/client/views/users/user.html
@@ -1,12 +1,12 @@
 <template name="user">
-  <div class="card blue-grey darken-1">
-    <div class="card-content white-text">
-      <span class="card-title">{{profile.name}}</span>
+  <div class="card">
+    <div class="card-content">
+      <span class="card-title black-text">{{profile.name}}</span>
     </div>
-    <div class="card-action">
-      {{#if notCurrentUser}}
+    {{#if notCurrentUser}}
+      <div class="card-action">
         <a class="delete" href="#">Apagar</a>
-      {{/if}}
-    </div>
+      </div>
+    {{/if}}
   </div>
 </template>
