--- a/client/layouts/main.html
+++ b/client/layouts/main.html
@@ -6,8 +6,9 @@
         <a href="#" class="brand-logo">Kulverão</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><a href="/products">Produtos</a></li>
-          <li><a href="#">Vendas</a></li>
+          <li><a href="/sales">Vendas</a></li>
           <li><a href="/users">Utilizadores</a></li>
+          <li><a href="/overview">Gráfico</a></li>
           <li><a class="logout" href="#">Terminar Sessão</a></li>
         </ul>
       </div>
